upgrade maven project settings