@@ -256,44 +256,66 @@
           <version>2.2.2</version>
         </plugin>
         <plugin>
-          <groupId>org.scala-tools</groupId>
-          <artifactId>maven-scala-plugin</artifactId>
-          <version>2.15.2</version>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.2.2</version>
           <executions>
+            <execution>
+              <id>eclipse-add-source</id>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+            </execution>
             <execution>
               <id>scala-compile-first</id>
               <phase>process-resources</phase>
               <goals>
-                <goal>add-source</goal>
                 <goal>compile</goal>
               </goals>
             </execution>
             <execution>
-              <id>scala-test-compile</id>
+              <id>scala-test-compile-first</id>
               <phase>process-test-resources</phase>
               <goals>
                 <goal>testCompile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>attach-scaladocs</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>doc-jar</goal>
               </goals>
             </execution>
           </executions>
           <configuration>
             <scalaVersion>${scala-release-version}</scalaVersion>
             <!--
-            <compilerPlugins>
-                <compilerPlugin>
-                    <groupId>org.scala-lang.plugins</groupId>
-                    <artifactId>continuations</artifactId>
-                    <version>${scala-release-version}</version>
-                </compilerPlugin>
-            </compilerPlugins>
+            <recompileMode>incremental</recompileMode>
+            <useZincServer>true</useZincServer>
             -->
             <args>
               <arg>-unchecked</arg>
               <arg>-deprecation</arg>
+              <arg>-feature</arg>
               <arg>-encoding</arg>
               <arg>UTF-8</arg>
-              <!-- <arg>-P:continuations:enable</arg> -->
+              <arg>-language:postfixOps</arg>
             </args>
+            <jvmArgs>
+              <jvmArg>-Xms1024m</jvmArg>
+              <jvmArg>-Xmx1024m</jvmArg>
+              <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
+              <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+              <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
+            </jvmArgs>
+            <javacArgs>
+              <javacArg>-source</javacArg>
+              <javacArg>${java.version}</javacArg>
+              <javacArg>-target</javacArg>
+              <javacArg>${java.version}</javacArg>
+              <javacArg>-Xlint:all,-serial,-path</javacArg>
+            </javacArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -474,11 +496,14 @@
     <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
     <tapestry-release-version>5.3.8</tapestry-release-version>
     <jetty-release-version>8.1.16.v20140903</jetty-release-version>
-    <scala-release-version>2.11.2</scala-release-version>
+    <scala-release-version>2.11.7</scala-release-version>
     <metrics-release-version>3.1.0</metrics-release-version>
     <hawtio-release-version>1.4.19</hawtio-release-version>
     <lucene-release-version>5.2.1</lucene-release-version>
     <proguard-release-version>5.1</proguard-release-version>
     <spring-release-version>4.2.4.RELEASE</spring-release-version>
+    <PermGen>64m</PermGen>
+    <MaxPermGen>512m</MaxPermGen>
+    <CodeCacheSize>512m</CodeCacheSize>
   </properties>
 </project>
